--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 Website is underconstruction
+
+My name is Franki Correa, I am studying Audio Production at the Arts Institute Miami International University of Arts and Design.
