--- a/index.html
+++ b/index.html
@@ -1,2 +1,57 @@
-Website is underconstruction
-My name is Franki Correa, I am studying Audio Production at the Arts Institute Miami International University of Arts and Design.
+<!doctype html>
+<html>
+	<head>
+	<meta charset="utf-8">
+	<title>TopTierSpecs</title>
+	<link href="https://fonts.googleapis.com/css?family=Timmana" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"> 
+	<link href="https://frankicorrea.com" rel="stylesheet" target="_blank" title="Franki Correa">
+	<style>
+body {
+	font-family: 'Quicksand', sans-serif;
+	text-align: center;
+}
+h2, h3 {
+	font-family: 'Timmana', sans-serif;
+	font-size: 33px;
+}
+		h1 {
+			font-family: 'Orbitron', sans-serif;
+				font-sized:33px;
+		}
+		h4 {
+			font-family: 'Timmana', sans-serif;
+			font-size:33px;
+		}
+html {
+	background-color: black;
+	color: whitesmoke;
+}
+h1 {
+	background-color:#FB070B;
+		color:black;
+}
+		nav{
+				text-align: right;
+		}
+		
+nav a{
+	color: Red;
+}
+</style>
+	</head>
+	<body>
+<nav> <a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a> </nav>
+<br>
+<img src="logo.gif" alt="TTS Logo" width="333" height="333"> 
+<h1> TopTierSpecs</h1>
+<h2>Motorsport</h2>
+<h3>Racing</h3>
+		<h4> Project: "Fairlady Z"</h4>
+   <br>
+   <footer>
+	   <a href="https://facebook.com/frankicorrea" text=Facebook </a>| Twitter | Email
+   </footer>
+    </body>
+</html>
