--- a/Contactus.html
+++ b/Contactus.html
@@ -8,6 +8,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 <style>
 	
+	iframe {
+		align-content: center;
+	}
+	
 	html {
 	background-color: black;
 	color: whitesmoke;
@@ -29,13 +33,14 @@
 </head>
 
 <body>
-<nav> <a href="index.html">Home</a> | <a href="aboutus.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="Contactus.html">Contact</a> </nav>
-<img src="logo.gif" alt="TTS Logo" width="333" height="333"> 
+<nav> <a href="index.html">Home</a> | <a href="aboutus.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="Contactus.html">Contact</a> | <a href="Resume.html">Resume</a></nav>
+<img src="FC logo.jpg" alt="FC Logo" width="550" height="350"> 
 <h1>
 	You can reach us at FrankiCorrea@gmail.com 
 	or
 	follow our social media
 	Thanks!
 </h1>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc83VIJKvaJiBQA96nxe4NhN3U3HDSGxukC30V5Dxumkh3TFg/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </body>
 </html>
