--- a/Resume.html
+++ b/Resume.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html>
-	<head>
+<head>
+<head>
 	<meta charset="utf-8">
-	<title>Franki Correa</title>
+	<title>Resume</title>
 	<link href="https://fonts.googleapis.com/css?family=Timmana" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"> 
 	<link href="https://frankicorrea.com" rel="stylesheet" target="_blank" title="Franki Correa">
-	<style>
+<title>Resume</title>
+<style>
 body {
 	font-family: 'Quicksand', sans-serif;
 	text-align: center;
@@ -40,25 +42,17 @@ nav a{
 	color: Red;
 }
 		
-		
-		
 </style>
-	</head>
-	<body>
+</head>
+<body>
 <nav> <a href="index.html">Home</a> | <a href="aboutus.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="Contactus.html">Contact</a> | <a href="Resume.html">Resume</a></nav>
 <br>
-<img src="FC logo.jpg" alt="FC Logo" width="560" height="450"> 
-<h1>Audio Engineer</h1>
-<h2>Recording</h2>
-<h3>Mixing</h3>
-<h4> Mastering</h4>
-		
-		
-   <br>
-   <footer>
-	   <a href="https://facebook.com/frankicorrea" text=Facebook</a> Facebook
-	   <br>
-	   <a href="https://twitter.com/Frankilord" class="twitter-follow-button" data-show-count="false">Follow @Frankilord</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-	</footer>
-    </body>
+<img src="FC logo.jpg" alt="FC Logo" width="550" height="350"> 
+<h1>
+	Resume
+</h1>
+<br>
+<iframe src="FC Resume.pdf" width=1000 height = 950>
+</iframe>
+</body>
 </html>
