--- a/aboutus.html
+++ b/aboutus.html
@@ -22,15 +22,19 @@ nav {
 nav a{
 	color: Red;
 }
+		iframe {
+			width:600px;
+			height:3000px;
+		}
+		
 	</style>
 </head>
 
 <body>
-<nav> <a href="index.html">Home</a> | <a href="aboutus.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="Contactus.html">Contact</a> </nav>
-<img src="logo.gif" alt="TTS Logo" width="333" height="333">
-<h1>
-	We are a professional Motorsport racing modding company
-	contact us for more info.
-</h1>
+<nav> <a href="index.html">Home</a> | <a href="aboutus.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="Contactus.html">Contact</a> | <a href= "Resume.html">Resume</a></nav>
+<img src="FC logo.jpg" alt="FC logo" width="227" height="117">
+	<h1></h1>	
+<br>
+<iframe style="width:100%; height:1000px;" src="//e.issuu.com/embed.html#29750957/49165565" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
